--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8005
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/users
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.username=
+spring.datasource.password=
 
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
@@ -17,8 +17,8 @@ security.jwt.expiration-time=86400000
 # Email configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ibneyalimbd@gmail.com
-spring.mail.password=veia ahme cyhl jcqk
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
